--- a/app/views/admin/railway_stations/index.html.erb
+++ b/app/views/admin/railway_stations/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Список станций</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Название</th>
@@ -15,5 +15,5 @@
 
 <br>
 
-<%= link_to 'Добавить станцию', new_admin_railway_station_path %>
+<%= link_to 'Добавить станцию', new_admin_railway_station_path %> |
 <%= link_to 'На главную', welcome_index_path %>
