--- a/app/views/admin/routes/_form.html.erb
+++ b/app/views/admin/routes/_form.html.erb
@@ -1,18 +1,26 @@
-<%= form_with(model: [:admin, @route], local: true) do |f| %>
+<%= form_with(model: [:admin, @route], local: true, html: {class: "form-inline"}) do |f| %>
   <%= render 'common/errors', resource: @route %>
 
-  <div class="field">
-    <%= f.label :name, "Наименование" %>
-    <%= f.text_field :name, id: :route_name %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.label :name, "Наименование" %>
+      <%= f.text_field :name, id: :route_name, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :railway_station_ids, 'Станции в маршруте' %>
-    <%= f.collection_select :railway_station_ids, RailwayStation.all,
-                            :id, :title, {}, { multiple: true } %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.label :railway_station_ids, 'Станции в маршруте' %>
+      <%= f.collection_select :railway_station_ids, RailwayStation.all,
+                            :id, :title, {}, { multiple: true, class: "form-control"} %>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "#{ @route.new_record? ? 'Создать' : 'Изменить' }" %>
+  <br>
+
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.submit "#{ @route.new_record? ? 'Создать' : 'Изменить' }", class: "btn" %>
+    </div>
   </div>
 <% end %>
