--- a/app/views/admin/routes/index.html.erb
+++ b/app/views/admin/routes/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Список маршрутов</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Наименование</th>
@@ -15,5 +15,5 @@
 
 <br>
 
-<%= link_to 'Добавить маршрут', new_admin_route_path %>
+<%= link_to 'Добавить маршрут', new_admin_route_path %> |
 <%= link_to 'На главную', welcome_index_path %>
