--- a/app/views/searches/_buy_ticket.html.erb
+++ b/app/views/searches/_buy_ticket.html.erb
@@ -2,5 +2,5 @@
   <%= hidden_field_tag(:from_station_id, @search_result.from_station.id) %>
   <%= hidden_field_tag(:to_station_id, @search_result.to_station.id) %>
   <%= hidden_field_tag(:train_id, train.id) %>
-  <%= button_to 'Купить' %>
+  <%= button_to t(".buy") %>
 <% end %>
