--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,19 +1,25 @@
-<%= form_with(model: ticket, local: true) do |f| %>
+<%= form_with(model: ticket, local: true, html: {class: "form-inline"}) do |f| %>
   <%= render 'common/errors', resource: @ticket %>
 
-  <div class="field">
-    <%= f.label :full_name, "ФИО" %>
-    <%= f.text_field :full_name, id: :ticket_full_name %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.label :full_name, t(".full_name") %>
+      <%= f.text_field :full_name, id: :ticket_full_name, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :passport_number, "Номер паспорта" %>
-    <%= f.text_field :passport_number, id: :ticket_passport_number %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.label :passport_number, t(".passport_number") %>
+      <%= f.text_field :passport_number, id: :ticket_passport_number, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :wagon_id, 'Номер вагона' %>
-    <%= f.collection_select :wagon_id, @train.wagons, :id, :number %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.label :wagon_id, t(".wagon_number") %>
+      <%= f.collection_select :wagon_id, @train.wagons, :id, :number, {}, html_options = {class: "form-control"} %>
+    </div>
   </div>
 
   <%= hidden_field_tag("ticket[from_station_id]", @from_station.id) %>
@@ -23,7 +29,11 @@
   <%= hidden_field_tag(:to_station_id, @to_station.id) %>
   <%= hidden_field_tag(:train_id, @train.id) %>
 
-  <div class="actions">
-    <%= f.submit "Купить" %>
+  <br>
+
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.submit t(".buy"), class: "btn" %>
+    </div>
   </div>
 <% end %>
