--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -2,10 +2,10 @@
 
 <hr/>
 
-<table>
+<table class="table table-striped">
   <thead>
-    <tr>
-      <td width="150">Пассажир</td>
+    <tr style="font-weight: bold">
+      <td>Пассажир</td>
       <td>Номер паспорта</td>
       <td>Номер билета</td>
     </tr>
@@ -21,10 +21,10 @@
 
 <hr/>
 
-<table>
+<table class="table table-striped">
   <thead>
-    <tr>
-      <td width="150">Маршрут</td>
+    <tr style="font-weight: bold">
+      <td>Маршрут</td>
       <td>Oтправление</td>
       <td>Прибытие</td>
       <td>Вагон</td>
