--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -5,7 +5,10 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="../welcome/index"><span class="glyphicon glyphicon-road"></span>Tutu</a>
+    <div class="brand-container">
+      <a class="navbar-brand" href="/"></a>
+      <div class="logo">Туту</div>
+    </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
