--- a/app/views/admin/railway_stations/_form.html.erb
+++ b/app/views/admin/railway_stations/_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_with(model: [:admin, @railway_station], local: true, html: {class: "form-inline"}) do |f| %>
-  <%= render 'common/errors', resource: @railway_station %>
+<% hidden = false unless local_assigns[:hidden] %>
+<%= form_for [:admin, station], html: {class: "form-inline", style: "display: #{hidden ? 'none' : 'block'}" } do |f| %>
+  <%= render 'common/errors', resource: station %>
 
   <div class="row">
     <div class="col-md-4">
@@ -12,7 +13,7 @@
 
   <div class="row">
     <div class="col-md-4">
-      <%= f.submit "#{ @railway_station.new_record? ? 'Создать' : 'Изменить' }", class: "btn" %>
+      <%= f.submit "#{ station.new_record? ? 'Создать' : 'Изменить' }", class: "btn" %>
     </div>
   </div>
 <% end %>
