--- a/app/views/admin/trains/index.html.erb
+++ b/app/views/admin/trains/index.html.erb
@@ -15,5 +15,5 @@
 
 <br>
 
-<%= link_to 'Добавить поезд', new_admin_train_path %>
+<%= link_to 'Добавить поезд', new_admin_train_path %> |
 <%= link_to 'На главную', welcome_index_path %>
