change_url_logo

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -23,7 +23,7 @@
 .navbar-brand {
   width: 100%;
   margin: 0 auto !important;
-  background-image: url(train.png);
+  background-image: url(<%= asset_data_uri 'train.png' %>);
   background-size: 80px;
   background-repeat: no-repeat;
 }
